service-a-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serviceA
  template:
    metadata:
      labels:
        app: serviceA
    spec:
      containers:
      - name: bitcoin-app-1
        image: lidorregistry.azurecr.io/bitcoin-value:1.0.2
        ports:
        - containerPort: 80
