service-b-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serviceB
  template:
    metadata:
      labels:
        app: serviceB
    spec:
      containers:
      - name: bitcoin-app-2
        image: lidorregistry.azurecr.io/bitcoin-value:1.0.2
        ports:
        - containerPort: 80
