service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a-service
spec:
  type: ClusterIP
  selector:
    app: serviceA
  ports:
    - protocol: TCP
      port: 80  # Exposed external port for accessing ServiceA
      targetPort: 80  # Port within the container where Flask app is running
